backends/drm: force a modeset when connectors are unplugged

And turn off unused CRTCs with legacy

BUG: 478476